--- a/assets/scss/pages/_clipboard.scss
+++ b/assets/scss/pages/_clipboard.scss
@@ -14,6 +14,9 @@ body{
       justify-content: center;
       align-items: center;
       ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         li {
           font-size: 14px;
           a {
