--- a/assets/scss/pages/_header.scss
+++ b/assets/scss/pages/_header.scss
@@ -269,6 +269,10 @@ header {
       }
   
     }
+    &.active{
+      position: fixed !important;
+      z-index: 22;
+    }
   }
   .mobile-menu {
     overflow: hidden;
